# cv-sentence-extractor

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  first2000.txt  foo.txt  requirements.txt  rust-toolchain  wiki.az.txt  wiki.hi.txt
.github/workflows/: extraction.yml  main.yml  manual-dispatch-wikipedia-rerun.yml  manual-dispatch-wikipedia.yml  manual-dispatch-wikisource.yml  manual-dispatch.yml  manual-issue-trigger.yml  pull-requests.yml  sample-extraction.yml  wiki-extraction.yml
samples/: sample.az.1.txt  sample.az.2.txt  sample.az.3.txt  sample.az.4.txt  sample.az.5.txt
scripts/: create-blocklist.sh  dedupe.sh  extraction.sh  new-wikipedia-articles.js  package-lock.json  package.json  sample-extraction.sh  wiki-extraction.sh
scripts/providers/: common.sh  wiki-source.sh  wiki.sh
src/: app.rs  character_map.rs  checker.rs  config.rs  extractor.rs  lib.rs  loader.rs  main.rs  replacer.rs  rules.rs  segmenter.rs  standard_characters.rs  tokenizer.rs  traditional_characters.rs
src/app/: mod.rs  tests.rs
src/extractor/: error.rs  mod.rs
src/languages/: checker.rs  english.rs  french.rs  mod.rs
src/loaders/: definition.rs  file.rs  mod.rs  wikipedia.rs
src/rules/: az.toml  basque.toml  be.toml  bn.toml  ca.toml  catalan.toml  cs.toml  czech.toml  de.toml  en.toml  english.toml  eo.toml  esperanto.toml  eu.toml  fr.toml  french.toml  georgian.toml  german.toml  gl.toml  hi.toml  hindi.toml  hu.toml  ig.toml  it.toml  italian.toml  ka.toml  lt.toml  lv.toml  or.toml  pl.toml  russian.toml  sah.toml  sk.toml  spanish.toml  sv.toml  sw.toml  th.toml  tr.toml  uk.toml
src/rules/disallowed_words/: german.txt  gl.txt  hi.txt  hu.txt  ig.txt  lv.txt  russian.txt  sah.txt  sv.txt  sw.txt  tr.txt  uk.txt
src/test_data/: black_chars.txt  wiki_00  wiki_01  wiki_02
