[package]
name = "common_voice_sentence_collector"
version = "1.0.0"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

[lib]
name = "common_voice_sentence_collector"
path = "src/lib.rs"

[[bin]]
name = "common_voice_sentence_collector"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
glob = "0.3"
clap = "2.33"
lazy_static = "1"
itertools = "0.8"
regex = "1"
punkt = "1.0.5"
rand = "0.6"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }