[package]
name = "common_voice_sentence_collector"
version = "1.0.0"
authors = ["Florian Merz <flomerz@gmail.com>"]
edition = "2018"

[lib]
name = "common_voice_sentence_collector"
path = "src/lib.rs"

[[bin]]
name = "common_voice_sentence_collector"
path = "src/main.rs"

[dependencies]
serde_json = "1.0.64"
glob = "0.3.0"
clap = "2.33.3"
lazy_static = "1.4.0"
itertools = "0.10.0"
regex = "1.5.4"
punkt = "1.0.5"
rand = "0.8.3"
toml = "0.5.8"
serde = { version = "1.0.126", features = ["derive"] }
inline-python = "0.7.0"
